# EasyDocsFinder

./: .gitignore  LICENSE  README.md  pyproject.toml
src/easydocsfinder/: __init__.py  __main__.py  search.py  utils.py
tests/: test_cli.py  test_concurrency.py  test_contains.py  test_search.py
