[project]
name = "easydocsfinder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chen Zhang", email = "aminodevis263@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
easydocsfinder = "easydocsfinder:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "pytest>=9.0.2",
]
